k8s/api-flask/flask.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-flask-deploy
  labels:
    app: api-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-flask
  template:
    metadata:
      labels:
        app: api-flask
    spec:
      containers:
      - name: api-flask
        image: bosukeme/api-flask-k8s:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 5000
        securityContext:
          allowPrivilegeEscalation: false 
          privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
