k8s/api-flask/flask.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-flask-svc
  labels:
    app: api-flask
spec:
  selector:
    app: api-flask
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
