k8s/api-flask/flask.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-flask-ingress
  labels:
    app: api-flask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  rules:
  - host: api-flask.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-flask-svc
            port: 
              number: 5000
